<resources>
    <string name="app_name">Mock App</string>
    <string name="save">Save</string>
    <string name="title">Set up a monthly budget gold</string>
    <string name="total_budget">Total budget is</string>
    <string name="budget">$ 1,500</string>
    <string name="dollar">$</string>

    <string name="status_normal">Normal</string>
    <string name="status_a_lot">That is a lot </string>
    <string name="status_crazy">You are crazy?</string>

    <string name="description_normal">It is ok to eat at your place \nUp to 5 % of economy</string>
    <string name="description_a_lot">Sometime, you can eat in coffee\n Up to 3 % of economy</string>
    <string name="description_crazy">Eat in restaurant everyday \n Blow off 30% of money</string>


</resources>